add images to buttons and embed video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,21 +3,46 @@
 body {
     background-image: url(../images/galaxy-3607885_1920.jpg);
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     font-family: Righteous, sans-serif;
     color: aliceblue;
+    text-align: center;
 }
 
 #game-container {
     width: 60%;
     margin: auto;
+    text-align: center;
 
 }
+
+
 
 #result-display {
     width: 33%;
     margin: auto;
     margin-top: 100px;
+    text-align: center;
+}
+
+#rock {
+    background-image: url("../images/rock4.png");
+}
+
+#paper {
+    background-image: url("../images/paper1.png");
+}
+
+#scissors {
+    background-image: url("../images/scissors1.png")
+}
+
+#lizard {
+    background-image: url("../images/lizard1.png")
+}
+
+#spock {
+    background-image: url("../images/spock.png")
 }
 
 p {
@@ -26,11 +51,12 @@ p {
 }
 
 .icons {
-    width: 100px;
-    height: 60px;
-    font-size: larger;
+    width: 150px;
+    height: 100px;
     background-color: aqua;
-
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center
 }
 
 .icons:active {
@@ -46,4 +72,8 @@ p {
 
 #cpu-selection {
     margin-top: 50px;
+}
+
+.video {
+    text-align: center;
 }
