--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,14 +17,11 @@ body {
 
 }
 
-
-
 #result-display {
-    width: 33%;
-    margin: auto;
-    margin-top: 100px;
-    text-align: center;
+    margin: 50px;
 }
+
+
 
 #rock {
     background-image: url("../images/rock.png");
@@ -69,6 +66,10 @@ p {
 #user-selection {
     margin-top: 50px;
 
+}
+
+#versus {
+    color: #da3030;
 }
 
 #cpu-selection {
