add media queries for smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,9 +68,6 @@ p {
 
 }
 
-#versus {
-    color: #da3030;
-}
 
 #cpu-selection {
     margin-top: 50px;
@@ -80,4 +77,11 @@ p {
 
 .video {
     text-align: center;
+}
+
+@media screen and (max-width: 350px) {
+    .icons {
+        width: 75px;
+        height: 50px
+    }
 }
