--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,4 +84,10 @@ p {
         width: 75px;
         height: 50px
     }
+
+    .video {
+        width: 150px;
+        height: 75px;
+        ;
+    }
 }
