change pictures to more suitable images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,23 +24,23 @@ body {
 /*below sets the images that populate the game buttons*/
 
 #rock {
-    background-image: url("../images/rock.png");
+    background-image: url("../images/fist1.png");
 }
 
 #paper {
-    background-image: url("../images/paper.webp");
+    background-image: url("../images/paper2.png");
 }
 
 #scissors {
-    background-image: url("../images/scissors.webp")
+    background-image: url("../images/scissors1.png")
 }
 
 #lizard {
-    background-image: url("../images/lizard1.jpg")
+    background-image: url("../images/lizard5.png")
 }
 
 #spock {
-    background-image: url("../images/spock.jpg")
+    background-image: url("../images/spock.png")
 }
 
 /*set the styles of the individual icons*/
@@ -48,7 +48,7 @@ body {
 .icons {
     width: 150px;
     height: 100px;
-    background-color: aqua;
+    background-color: #ffea00;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center
