change margin on result boxes to fit mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,5 +125,13 @@ body {
         font-size: 20px;
     }
 
+    #result-display {
+        margin: 0;
+    }
+
+    #cpu-display {
+        margin: 0;
+    }
+
 
 }
