--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body {
     height: 200px;
     width: 200px;
     font-size: 10px;
-    
+
 }
 
 #result-container {
@@ -83,7 +83,7 @@ body {
 
 #centerText {
     font-size: 40px;
-    color: black;
+    color: white;
 
 }
 
