--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 .swal-height {
     height: 200px;
     width: 200px;
-    font-size: 10px;
+    font-size: 12px;
 }
 
 #result-container {
@@ -102,6 +102,10 @@ body {
     font-size: 50px;
 }
 
+.headerLogo:hover {
+    color: red;
+}
+
 .headerHowToPlay {
     margin-top: 75px;
     margin-bottom: 75px;
@@ -119,6 +123,10 @@ body {
     font-size: x-large;
     border-radius: 10px;
     margin-top: 20px;
+}
+
+.homeIcons:hover {
+    color: red;
 }
 
 /*changes size for smaller screens*/
