update readme with photos and text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,10 @@ body {
     color: red;
 }
 
+#textInstructions {
+    font-size: 20px;
+}
+
 /*changes size for smaller screens*/
 
 @media screen and (max-width: 750px) {
