update read me with reference to sounds added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,21 @@ body {
     color: white;
 }
 
+#rulesButton {
+    width: 100px;
+    height: 75px;
+    background-color: aqua;
+    font-family: Righteous, sans-serif;
+    font-size: x-large;
+    border-radius: 10px;
+    margin-top: 20px;
+    color: black
+}
+
+#rulesButton:hover {
+    color: red;
+}
+
 /*move the youtube clip to the center of the screen*/
 
 .video {
@@ -123,6 +138,7 @@ body {
     font-size: x-large;
     border-radius: 10px;
     margin-top: 20px;
+    color: black;
 }
 
 .homeIcons:hover {
