--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,11 @@ body {
     background-color: #ffea00;
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center
+    background-position: center;
+    color: black;
+    font-size: 20px;
+    font-family: Righteous, sans-serif;
+
 }
 
 .icons:active {
@@ -82,6 +86,21 @@ body {
 .gameText {
     font-size: 40px;
     color: white;
+}
+
+#playerScore {
+    font-size: 40px;
+    color: red;
+}
+
+#cpuScore {
+    font-size: 40px;
+    color: red;
+}
+
+#firstToTen {
+    font-size: 30px;
+
 }
 
 #rulesButton {
@@ -183,7 +202,16 @@ body {
         height: 75px;
     }
 
-    #centerText {
+    .gameText {
+        font-size: 20px;
+
+    }
+
+    #playerScore {
+        font-size: 20px;
+    }
+
+    #cpuScore {
         font-size: 20px;
     }
 
@@ -195,7 +223,13 @@ body {
         margin: 0;
     }
 
+    #playerPlaceholder {
+        font-size: 10px;
+    }
 
+    #cpuPlaceholder {
+        font-size: 10px;
+    }
 }
 
 @media screen and (max-width: 400px) {
