--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ body {
     text-align: center;
     padding-top: 25px;
     padding-bottom: 25px;
+    pointer-events: none;
 }
 
 /*below sets the images that populate the game buttons*/
