change game limit to 5 and add hand pointer on hover over selection area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,10 @@ body {
     box-shadow: 0 5px #666;
 }
 
+.icons:hover {
+    cursor: pointer;
+}
+
 #result-display {
     margin-right: 30px;
 }
