update readme with screenshot of jshint

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,23 +33,23 @@ body {
 }
 
 /*below sets the images that populate the game buttons*/
-#rock {
+#rockBtn {
     background-image: url("../images/fist1.png");
 }
 
-#paper {
+#paperBtn {
     background-image: url("../images/paper2.png");
 }
 
-#scissors {
+#scissorsBtn {
     background-image: url("../images/scissors1.png")
 }
 
-#lizard {
+#lizardBtn {
     background-image: url("../images/lizard5.png")
 }
 
-#spock {
+#spockBtn {
     background-image: url("../images/spock.png")
 }
 
